@@ -66,3 +66,5 @@
      legendre_phi
      znorder
      znlog
+
+- binomial tests, documentation
